# bit-packer

./: BitPacker.hpp  CMakeLists.txt  basicTests.cpp  dummyTest.cpp  main.cpp  unitTests.cpp
